src-liberty_parse-2.6/test/example.lut.ref



reading example.lut.lib...
... Done. 


Checking the database...

NOTE: The technology cmos was specified.
NOTE: No delay_model attribute specified in the library; the delay_model 'generic_cmos' is assumed.
NOTE: Using the cmos syntax tables...
ERROR: example.lut.lib:7, The 'index_1' attribute contains the negative value '-1'. The template 't111' is therefore invalid. (Semantic Error found in data.)
NOTE:          Here is a list of references to this invalid template:
NOTE:            example.lut.lib:34, group 'rise_transition'
NOTE:            example.lut.lib:43, group 'fall_transition'
ERROR: example.lut.lib:8, The 'index_2' attribute contains the negative value '-3'. The template 't111' is therefore invalid. (Semantic Error found in data.)
NOTE:          Here is a list of references to this invalid template:
NOTE:            example.lut.lib:34, group 'rise_transition'
NOTE:            example.lut.lib:43, group 'fall_transition'
Errors detected

... Done. 


Stats:


Library example:
   cells: 2

Quitting..
Done....
